--- a/packages/daybyday/package.json
+++ b/packages/daybyday/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "daybyday",
+  "name": "daybydaydd",
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
@@ -8,5 +8,6 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "gitHead": "fa3c48d39292adec2ac1a6dbe4f6e937d96074a1"
 }
